# gddi-algo-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/modules/: acceleration.cmake  boost.cmake  concurrentqueue.cmake  eigen3.cmake  opencv.cmake  rockchip.cmake  spdlog.cmake
cmake/toolchains/: aarch64_linux_bm1684x.toolchain
include/: cover_plate_algo.h  door_hat_algo.h  helmet_algo.h  hoisting_operation_algo.h  light_glove_algo.h  light_goggle_algo.h  light_leavepost_algo.h  light_mask_algo.h  light_person_algo.h  person_algo.h  person_misc_algo.h  play_phone_algo.h  safety_belt_algo.h  smoke_algo.h  sparks_cover_algo.h  struct_def.h  weld_glove_algo.h
samples/: sample_cover_plate_algo.cpp  sample_door_hat_algo.cpp  sample_helmet_algo.cpp  sample_hoisting_operation_algo.cpp  sample_light_glove_algo.cpp  sample_light_goggle_algo.cpp  sample_light_leavepost_algo.cpp  sample_light_mask_algo.cpp  sample_light_person_algo.cpp  sample_person_algo.cpp  sample_person_misc_algo.cpp  sample_play_phone_algo.cpp  sample_safety_belt_algo.cpp  sample_smoke_algo.cpp  sample_sparks_cover_algo.cpp  sample_weld_glove_algo.cpp
src/: cover_plate_algo.cpp  door_hat_algo.cpp  helmet_algo.cpp  hoisting_operation_algo.cpp  light_glove_algo.cpp  light_goggle_algo.cpp  light_leavepost_algo.cpp  light_mask_algo.cpp  light_person_algo.cpp  person_algo.cpp  person_misc_algo.cpp  play_phone_algo.cpp  safety_belt_algo.cpp  sequence_statistic.cpp  sequence_statistic.h  smoke_algo.cpp  sparks_cover_algo.cpp  utils.h  weld_glove_algo.cpp
src/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h  utils.cpp
